@@ -16,6 +16,7 @@ next
     - Current monitor indicated by styling the layout icon differently.
   - Set class hint "Katriawm/decoration" on decoration windows, so tools
     like compton can ignore them.
+  - ICCCM size hints: Requests for a fixed size are being honoured.
 
 Milestone 3  2016-01-03
   [Fixed]
